# internal/transport/user/userHandler.go
@@ -27,17 +27,19 @@ func NewUserHandler(logger *slog.Logger, service user_service.UserService) trans
 
 const (
 	signUp = "/register"
+	signIn = "/login"
 )
 
 func (handler *userHandler) Register(router *mux.Router) {
 	router.HandleFunc(signUp, handler.signUp).Methods(http.MethodPost)
+	router.HandleFunc(signIn, handler.signIn).Methods(http.MethodPost)
 }
 
 // Регистрация в системе
 // @Summary SignUp
 // @Tags auth
 // @Description Регистрациия в системе. Минимальная длина логина и пароля - 3 символа.
-// @Description Логин должен быть уникальным.
+// @Description Максимальная длина - 50 символов. Логин должен быть уникальным.
 // @ID sign-up
 // @Accept json
 // @Produce json
@@ -100,4 +102,59 @@ func (handler *userHandler) signUp(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 	handler.logger.Info("successfull user registration", slog.String("id", id.String()),
 		slog.String("login", user.Login))
+}
+
+// Вход в систему
+// @Summary SignIn
+// @Tags auth
+// @Description Вход в систему. Указывается логин и пароль
+// @ID sign-in
+// @Accept json
+// @Produce json
+// @Param input body user_model.UserLogin true "user info"
+// @Success 200 {object} nil Успешная авторизация
+// @Failure 400 {object} transport.RespWriter Некооректные входные данные
+// @Failure 500 {object} transport.RespWriter Внутренняя ошибка сервера
+// @Router /login [post]
+func (handler *userHandler) signIn(w http.ResponseWriter, r *http.Request) {
+	handler.logger.Info("sign in handler")
+
+	handler.logger.Debug("read request body")
+	body, err := io.ReadAll(r.Body)
+	if err != nil {
+		handler.logger.Warn(err.Error())
+		transport.NewRespWriter(w, err.Error(), http.StatusBadRequest, handler.logger)
+		return
+	}
+	defer r.Body.Close()
+
+	handler.logger.Debug("request body", slog.String("body", string(body)))
+
+	handler.logger.Debug("unmarshaling request body")
+	var user user_model.UserLogin
+	if err := json.Unmarshal(body, &user); err != nil {
+		handler.logger.Warn(err.Error())
+		transport.NewRespWriter(w, err.Error(), http.StatusBadRequest, handler.logger)
+		return
+	}
+
+	handler.logger.Debug("validate user struct")
+	_, err = govalidator.ValidateStruct(user)
+	if err != nil {
+		handler.logger.Warn(err.Error())
+		transport.NewRespWriter(w, err.Error(), http.StatusBadRequest, handler.logger)
+		return
+	}
+
+	handler.logger.Debug("user service")
+	token, err := handler.service.SignIn(r.Context(), &user)
+	if err != nil {
+		handler.logger.Warn(err.Error())
+		transport.NewRespWriter(w, err.Error(), http.StatusInternalServerError, handler.logger)
+		return
+	}
+
+	w.Header().Set("authorization", "Bearer "+token)
+	w.WriteHeader(http.StatusOK)
+	handler.logger.Info("successful auth", slog.String("user", user.Login))
 }
